# us-bvar-dashboard

./: .env.example  .gitignore  CML_DEPLOYMENT.md  README.md  _typos.toml  app.py  cml_entry.py  pyproject.toml  requirements-cml.txt
.github/workflows/: ci.yml
artifacts/: active.json  bvar_forecast.pkl  bvar_forecast.pkl.sha256  metadata.json
artifacts/releases/20260721T000027Z-dfa1c3b864e0/: bvar_forecast.npz.sha256
data/: fred_panel.csv
scripts/: precompute.py  setup_cml.py
src/us_bvar/: __init__.py  artifact.py  config.py  dashboard.py  data.py  diagnostics.py  model.py  presentation.py  scenario_service.py  state_space.py  telemetry.py  transforms.py
tests/: conftest.py  test_app.py  test_artifact.py  test_data.py  test_diagnostics.py  test_model.py  test_precompute.py  test_presentation.py  test_scenario_service.py  test_setup_cml.py  test_telemetry.py
www/: app.css  app.js
