[project]
name = "us-bvar-dashboard"
version = "0.1.0"
description = "A monthly US Bayesian VAR dashboard with conditional scenario forecasts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "great-tables>=0.17",
    "httpx>=0.27",
    "numpy>=2.0",
    "pandas>=2.2",
    "python-dotenv>=1.1",
    "scipy>=1.14",
    "shiny>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/us_bvar"]
